kubernetes/apps/65to1/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: 65to1
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
