kubernetes/apps/65to1/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 65to1
  namespace: 65to1
spec:
  ingressClassName: internal
  rules:
  - host: 65to1.com
    http:
      paths:
      - backend:
          service:
            name: www65to1-site
            port:
              number: 80
        path: /
        pathType: Prefix
